--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arabic Games</title>
+    <title>Arabic Game</title>
+
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/gameContainer.css">
+    <link rel="stylesheet" href="./css/scoreContainer.css">
 </head>
 <body>
-    before 
-    <br>
 
-    <%- body %>
 
-    <br>
-    After
+    
+    <script type="module" src="./js/mainGame.js"></script>
+    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/timer.js"></script>
+    
 </body>
 </html>
