--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,7 +14,7 @@
 
     
     <script type="module" src="./js/mainGame.js"></script>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/start.js"></script>
     <script type="module" src="./js/timer.js"></script>
     
 </body>
