Fix index.ejs and layout.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,5 +19,9 @@
         <button class="executeButton" id="timerFirstButton">0:30</button>
         <button class="executeButton" id="timerSecondButton">1:00</button>
     </div>
+
+    <script type="module" src="./js/mainGame.js"></script>
+    <script type="module" src="./js/start.js"></script>
+    <script type="module" src="./js/timer.js"></script>
     
 </div>
