--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -13,9 +13,7 @@
 
 
     
-    <script type="module" src="./js/mainGame.js"></script>
-    <script type="module" src="./js/start.js"></script>
-    <script type="module" src="./js/timer.js"></script>
+    <%- body %>
     
 </body>
 </html>
